versioned_docs/version-5.2/client-api/operations/server-wide/compact-database.mdx
---
title: "Compact Database Operation"
hide_table_of_contents: true
sidebar_label: Compact Database
sidebar_position: 1
---

import Admonition from '@theme/Admonition';
import Tabs from '@theme/Tabs';
import TabItem from '@theme/TabItem';
import CodeBlock from '@theme/CodeBlock';
import LanguageSwitcher from "@site/src/components/LanguageSwitcher";
import LanguageContent from "@site/src/components/LanguageContent";

export const supportedLanguages = ["csharp", "nodejs"];


# Compact Database Operation
<LanguageSwitcher supportedLanguages={supportedLanguages} />
<LanguageContent language="csharp">

<Admonition type="note" title="Note">

* The compaction operation __removes empty gaps on disk__ that still occupy space after deletes.  
  You can choose what should be compacted: documents and/or selected indexes.  

* __During compaction the database will be offline__.  
  The operation is a executed asynchronously as a background operation and can be awaited.  

* The operation will __compact the database on one node__.  
  To compact all database-group nodes, the command must be sent to each node separately.  

* **Target node**:  
  By default, the operation will be executed on the server node that is defined by the [client configuration](../../../client-api/configuration/load-balance/overview.mdx#client-logic-for-choosing-a-node).  
  The operation can be executed on a specific node by using the [ForNode](../../../client-api/operations/how-to/switch-operations-to-a-different-node.mdx) method.  

* **Target database**:  
  The database to compact is specified in `CompactSettings` (see examples below).  
  An exception is thrown if the specified database doesn't exist on the server node.  

* In this page:  
  * [Examples](../../../client-api/operations/server-wide/compact-database.mdx#examples):  
      * [Compact documents](../../../client-api/operations/server-wide/compact-database.mdx#examples)  
      * [Compact specific indexes](../../../client-api/operations/server-wide/compact-database.mdx#compact-specific-indexes)  
      * [Compact all indexes](../../../client-api/operations/server-wide/compact-database.mdx#compact-all-indexes)  
      * [Compact on other nodes](../../../client-api/operations/server-wide/compact-database.mdx#compact-on-other-nodes)  
  * [Compaction triggers compression](../../../client-api/operations/server-wide/compact-database.mdx#compaction-triggers-compression)  
  * [Compact from Studio](../../../client-api/operations/server-wide/compact-database.mdx#compact-from-studio)  
  * [Syntax](../../../client-api/operations/server-wide/compact-database.mdx#syntax)  

</Admonition>
## Examples

<Admonition type="note" title="Note">

#### Compact documents

* The following example will compact only documents for the specified database.  

<Tabs groupId='languageSyntax'>
<TabItem value="Sync" label="Sync">
<CodeBlock language="csharp">
{`// Define the compact settings
CompactSettings settings = new CompactSettings
{
    // Database to compact
    DatabaseName = "Northwind",

    // Set 'Documents' to true to compact all documents in database
    // Indexes are not set and will not be compacted
    Documents = true
};

// Define the compact operation, pass the settings
IServerOperation<OperationIdResult> compactOp = new CompactDatabaseOperation(settings);

// Execute compaction by passing the operation to Maintenance.Server.Send
Operation operation = documentStore.Maintenance.Server.Send(compactOp);

// Wait for operation to complete, during compaction the database is offline
operation.WaitForCompletion();
`}
</CodeBlock>
</TabItem>
<TabItem value="Async" label="Async">
<CodeBlock language="csharp">
{`// Define the compact settings
CompactSettings settings = new CompactSettings
{
    // Database to compact
    DatabaseName = "Northwind",

    // Set 'Documents' to true to compact all documents in database
    // Indexes are not set and will not be compacted
    Documents = true
};

// Define the compact operation, pass the settings
IServerOperation<OperationIdResult> compactOp = new CompactDatabaseOperation(settings);

// Execute compaction by passing the operation to Maintenance.Server.SendAsync
Operation operation = await documentStore.Maintenance.Server.SendAsync(compactOp);

// Wait for operation to complete, during compaction the database is offline
await operation.WaitForCompletionAsync().ConfigureAwait(false);
`}
</CodeBlock>
</TabItem>
</Tabs>

</Admonition>

<Admonition type="note" title="Note">

#### Compact specific indexes

* The following example will compact only specific indexes.

<Tabs groupId='languageSyntax'>
<TabItem value="Sync" label="Sync">
<CodeBlock language="csharp">
{`// Define the compact settings
CompactSettings settings = new CompactSettings
{
    // Database to compact
    DatabaseName = "Northwind",
    
    // Setting 'Documents' to false will compact only the specified indexes
    Documents = false,
    
    // Specify which indexes to compact
    Indexes = new[] { "Orders/Totals", "Orders/ByCompany" }, 
    
    // Optimize indexes is Lucene's feature to gain disk space and efficiency
    // Set whether to skip this optimization when compacting the indexes
    SkipOptimizeIndexes = false
};

// Define the compact operation, pass the settings
IServerOperation<OperationIdResult> compactOp = new CompactDatabaseOperation(settings);

// Execute compaction by passing the operation to Maintenance.Server.Send
Operation operation = documentStore.Maintenance.Server.Send(compactOp);
// Wait for operation to complete
operation.WaitForCompletion();
`}
</CodeBlock>
</TabItem>
<TabItem value="Async" label="Async">
<CodeBlock language="csharp">
{`// Define the compact settings
CompactSettings settings = new CompactSettings
{
    // Database to compact
    DatabaseName = "Northwind",
    
    // Setting 'Documents' to false will compact only the specified indexes
    Documents = false,
    
    // Specify which indexes to compact
    Indexes = new[] { "Orders/Totals", "Orders/ByCompany" }, 
    
    // Optimize indexes is Lucene's feature to gain disk space and efficiency
    // Set whether to skip this optimization when compacting the indexes
    SkipOptimizeIndexes = false
};

// Define the compact operation, pass the settings
IServerOperation<OperationIdResult> compactOp = new CompactDatabaseOperation(settings);

// Execute compaction by passing the operation to Maintenance.Server.SendAsync
Operation operation = await documentStore.Maintenance.Server.SendAsync(compactOp);
// Wait for operation to complete
await operation.WaitForCompletionAsync().ConfigureAwait(false);
`}
</CodeBlock>
</TabItem>
</Tabs>

</Admonition>

<Admonition type="note" title="Note">

#### Compact all indexes

* The following example will compact all indexes and documents.  

<Tabs groupId='languageSyntax'>
<TabItem value="Sync" label="Sync">
<CodeBlock language="csharp">
{`// Get all indexes names in the database using the 'GetIndexNamesOperation' operation
// Use 'ForDatabase' if the target database is different than the default database defined on the store
string[] allIndexNames =
    documentStore.Maintenance.ForDatabase("Northwind")
        .Send(new GetIndexNamesOperation(0, int.MaxValue));

// Define the compact settings
CompactSettings settings = new CompactSettings
{
    DatabaseName = "Northwind", // Database to compact
    
    Documents = true,           // Compact all documents

    Indexes = allIndexNames,    // All indexes will be compacted
    
    SkipOptimizeIndexes = true  // Skip Lucene's indexes optimization
};

// Define the compact operation, pass the settings
IServerOperation<OperationIdResult> compactOp = new CompactDatabaseOperation(settings);

// Execute compaction by passing the operation to Maintenance.Server.Send
Operation operation = documentStore.Maintenance.Server.Send(compactOp);
// Wait for operation to complete
operation.WaitForCompletion();
`}
</CodeBlock>
</TabItem>
<TabItem value="Async" label="Async">
<CodeBlock language="csharp">
{`// Get all indexes names in the database using the 'GetIndexNamesOperation' operation
// Use 'ForDatabase' if the target database is different than the default database defined on the store
string[] allIndexNames =
    documentStore.Maintenance.ForDatabase("Northwind")
        .Send(new GetIndexNamesOperation(0, int.MaxValue));

// Define the compact settings
CompactSettings settings = new CompactSettings
{
    DatabaseName = "Northwind", // Database to compact
    
    Documents = true,           // Compact all documents

    Indexes = allIndexNames,    // All indexes will be compacted
    
    SkipOptimizeIndexes = true  // Skip Lucene's indexes optimization
};

// Define the compact operation, pass the settings
IServerOperation<OperationIdResult> compactOp = new CompactDatabaseOperation(settings);

// Execute compaction by passing the operation to Maintenance.Server.SendAsync
Operation operation = await documentStore.Maintenance.Server.SendAsync(compactOp);
// Wait for operation to complete
await operation.WaitForCompletionAsync();
`}
</CodeBlock>
</TabItem>
</Tabs>

</Admonition>

<Admonition type="note" title="Note">

#### Compact on other nodes

* By default, an operation executes on the server node that is defined by the [client configuration](../../../client-api/configuration/load-balance/overview.mdx#client-logic-for-choosing-a-node).  
* The following example will compact the database on all [member](../../../server/clustering/rachis/cluster-topology.mdx#nodes-states-and-types) nodes from its database-group topology.  
  `ForNode` is used to execute the operation on a specific node.   

<Tabs groupId='languageSyntax'>
<TabItem value="Sync" label="Sync">
<CodeBlock language="csharp">
{`// Get all member nodes in the database-group using the 'GetDatabaseRecordOperation' operation
List<string> allMemberNodes =
    documentStore.Maintenance.Server.Send(new GetDatabaseRecordOperation("Northwind"))
        .Topology.Members;

// Define the compact settings as needed
CompactSettings settings = new CompactSettings
{
    // Database to compact
    DatabaseName = "Northwind",
    
    //Compact all documents in database
    Documents = true
};

// Execute the compact operation on each member node
foreach (string nodeTag in allMemberNodes)
{
    // Define the compact operation, pass the settings
    IServerOperation<OperationIdResult> compactOp = new CompactDatabaseOperation(settings);
    
    // Execute the operation on a specific node
    // Use \`ForNode\` to specify the node to operate on
    Operation operation = documentStore.Maintenance.Server.ForNode(nodeTag).Send(compactOp);
    // Wait for operation to complete
    operation.WaitForCompletion();
}
`}
</CodeBlock>
</TabItem>
<TabItem value="Async" label="Async">
<CodeBlock language="csharp">
{`// Get all member nodes in the database-group using the 'GetDatabaseRecordOperation' operation
List<string> allMemberNodes =
    documentStore.Maintenance.Server.Send(new GetDatabaseRecordOperation("Northwind"))
        .Topology.Members;

// Define the compact settings as needed
CompactSettings settings = new CompactSettings
{
    // Database to compact
    DatabaseName = "Northwind",
    
    //Compact all documents in database
    Documents = true
};

// Execute the compact operation on each member node
foreach (string nodeTag in allMemberNodes)
{
    // Define the compact operation, pass the settings
    IServerOperation<OperationIdResult> compactOp = new CompactDatabaseOperation(settings);
    
    // Execute the operation on a specific node
    // Use \`ForNode\` to specify the node to operate on
    Operation operation = await documentStore.Maintenance.Server.ForNode(nodeTag).SendAsync(compactOp);
    // Wait for operation to complete
    await operation.WaitForCompletionAsync();
}
`}
</CodeBlock>
</TabItem>
</Tabs>
 
</Admonition>


## Compaction triggers compression

* When document [compression](../../../server/storage/documents-compression.mdx) is turned on, compression is applied to the documents when:
  * __New__ documents that are created and saved.  
  * __Existing__ documents that are modified and saved.  

* You can use the [compaction](../../../client-api/operations/server-wide/compact-database.mdx) operation to __compress existing documents without having to modify and save__ them.  
  Executing compaction triggers compression on ALL existing documents for the collections that are configured for compression.

* Learn more about Compression -vs- Compaction [here](../../../server/storage/documents-compression.mdx#compression--vs--compaction).



## Compact from Studio

* Compaction can be triggered from the [Storage Report](../../../studio/database/stats/storage-report.mdx) view in the Studio.  
  The operation will compact the database only on the node being viewed (node info is in the Studio footer).
 
* To compact the database on another node,  
  simply trigger compaction from the Storage Report view in a browser tab opened for that other node.



## Syntax

<TabItem value="syntax" label="syntax">
<CodeBlock language="csharp">
{`public CompactDatabaseOperation(CompactSettings compactSettings)
`}
</CodeBlock>
</TabItem>

| Parameters | Type | Description |
| - | - | - |
| **compactSettings** | `CompactSettings`  | Settings for the compact operation |

| `CompactSettings` | | |
| - | - | - |
| **DatabaseName** | string | Name of database to compact. Mandatory param. |
| **Documents** | bool | Indicates if documents should be compacted. Optional param. |
| **Indexes** | string[] | List of index names to compact. Optional param. |
| **SkipOptimizeIndexes** | bool | `true` - Skip Lucene's index optimization while compacting<br/>`false` - Lucene's index optimization will take place while compacting |
| | | __Note__: Either _Documents_ or _Indexes_ (or both) must be specified |




</LanguageContent>
<LanguageContent language="nodejs">

<Admonition type="note" title="Note">

* The compaction operation __removes empty gaps on disk__ that still occupy space after deletes.  
  You can choose what should be compacted: documents and/or selected indexes.  

* __During compaction the database will be offline__.  
  The operation is a executed asynchronously as a background operation and can be awaited.  

* The operation will __compact the database on one node__.  
  To compact all database-group nodes, the command must be sent to each node separately.  

* **Target node**:  
  By default, the operation will be executed on the server node that is defined by the [client configuration](../../../client-api/configuration/load-balance/overview.mdx#client-logic-for-choosing-a-node).  
  The operation can be executed on a specific node by using the [forNode](../../../client-api/operations/how-to/switch-operations-to-a-different-node.mdx) method.  

* **Target database**:  
  The database to compact is specified in `CompactSettings` (see examples below).  
  An exception is thrown if the specified database doesn't exist on the server node.  

* In this page:  
  * [Examples](../../../client-api/operations/server-wide/compact-database.mdx#examples):  
      * [Compact documents](../../../client-api/operations/server-wide/compact-database.mdx#examples)  
      * [Compact specific indexes](../../../client-api/operations/server-wide/compact-database.mdx#compact-specific-indexes)  
      * [Compact all indexes](../../../client-api/operations/server-wide/compact-database.mdx#compact-all-indexes)  
      * [Compact on other nodes](../../../client-api/operations/server-wide/compact-database.mdx#compact-on-other-nodes)  
  * [Compaction triggers compression](../../../client-api/operations/server-wide/compact-database.mdx#compaction-triggers-compression)  
  * [Compact from Studio](../../../client-api/operations/server-wide/compact-database.mdx#compact-from-studio)  
  * [Syntax](../../../client-api/operations/server-wide/compact-database.mdx#syntax)  

</Admonition>
## Examples

<Admonition type="note" title="Note">

#### Compact documents

* The following example will compact only documents for the specified database.  

<TabItem value="compact_0" label="compact_0">
<CodeBlock language="js">
{`// Define the compact settings
const compactSettings = \{
    // Database to compact
    databaseName: "Northwind",

    // Set 'documents' to true to compact all documents in database
    // Indexes are not set and will not be compacted
    documents: true
\};

// Define the compact operation, pass the settings
const compactOp = new CompactDatabaseOperation(compactSettings);

// Execute compaction by passing the operation to maintenance.server.send
const asyncOperation = await documentStore.maintenance.server.send(compactOp);

// Wait for operation to complete, during compaction the database is offline
await asyncOperation.waitForCompletion();
`}
</CodeBlock>
</TabItem>

</Admonition>

<Admonition type="note" title="Note">

#### Compact specific indexes

* The following example will compact only specific indexes.

<TabItem value="compact_1" label="compact_1">
<CodeBlock language="js">
{`// Define the compact settings
const compactSettings = \{
    // Database to compact
    databaseName: "Northwind",

    // Setting 'documents' to false will compact only the specified indexes
    documents: false,

    // Specify which indexes to compact
    indexes: ["Orders/Totals", "Orders/ByCompany"] 
\};

// Define the compact operation, pass the settings
const compactOp = new CompactDatabaseOperation(compactSettings);

// Execute compaction by passing the operation to maintenance.server.send
const asyncOperation = await documentStore.maintenance.server.send(compactOp);
// Wait for operation to complete
await asyncOperation.waitForCompletion();
`}
</CodeBlock>
</TabItem>

</Admonition>

<Admonition type="note" title="Note">

#### Compact all indexes

* The following example will compact all indexes and documents.  

<TabItem value="compact_2" label="compact_2">
<CodeBlock language="js">
{`// Get all indexes names in the database using the 'GetIndexNamesOperation' operation
// Use 'forDatabase' if the target database is different than the default database defined on the store
const allIndexNames = await documentStore.maintenance.forDatabase("Northwind")
    .send(new GetIndexNamesOperation(0, 50));

// Define the compact settings
const compactSettings = \{
    databaseName: "Northwind", // Database to compact

    documents: true,           // Compact all documents

    indexes: allIndexNames,    // All indexes will be compacted
\};

// Define the compact operation, pass the settings
const compactOp = new CompactDatabaseOperation(settings);
    
// Execute compaction by passing the operation to maintenance.server.send
const asyncOperation = await documentStore.maintenance.server.send(compactOp);
// Wait for operation to complete
await asyncOperation.waitForCompletion();
`}
</CodeBlock>
</TabItem>

</Admonition>

<Admonition type="note" title="Note">

#### Compact on other nodes

* By default, an operation executes on the server node that is defined by the [client configuration](../../../client-api/configuration/load-balance/overview.mdx#client-logic-for-choosing-a-node).  
* The following example will compact the database on all [member](../../../server/clustering/rachis/cluster-topology.mdx#nodes-states-and-types) nodes from its database-group topology.  
  `forNode` is used to execute the operation on a specific node.   

<TabItem value="compact_3" label="compact_3">
<CodeBlock language="js">
{`// Get all member nodes in the database-group using the 'GetDatabaseRecordOperation' operation
const databaseRecord =
    await documentStore.maintenance.server.send(new GetDatabaseRecordOperation("Northwind"));
const allMemberNodes = databaseRecord.topology.members;

// Define the compact settings as needed
const compactSettings = \{
    // Database to compact
    databaseName: "Northwind",

    //Compact all documents in database
    documents: true
\};

// Execute the compact operation on each member node
for (let i = 0; i < allMemberNodes.length; i++) \{
    // Define the compact operation, pass the settings
    const compactOp = new CompactDatabaseOperation(compactSettings);
    
    // Execute the operation on a specific node
    // Use \`forNode\` to specify the node to operate on
    const serverOpExecutor = await documentStore.maintenance.server.forNode(allMemberNodes[i]);
    const asyncOperation = await serverOpExecutor.send(compactOp);
    
    // Wait for operation to complete
    await asyncOperation.waitForCompletion();
\}
`}
</CodeBlock>
</TabItem>
 
</Admonition>


## Compaction triggers compression

* When document [compression](../../../server/storage/documents-compression.mdx) is turned on, compression is applied to the documents when:
    * __New__ documents that are created and saved.
    * __Existing__ documents that are modified and saved.

* You can use the [compaction](../../../client-api/operations/server-wide/compact-database.mdx) operation to __compress existing documents without having to modify and save__ them.  
  Executing compaction triggers compression on ALL existing documents for the collections that are configured for compression.

* Learn more about Compression -vs- Compaction [here](../../../server/storage/documents-compression.mdx#compression--vs--compaction).



## Compact from Studio

* Compaction can be triggered from the [Storage Report](../../../studio/database/stats/storage-report.mdx) view in the Studio.  
  The operation will compact the database only on the node being viewed (node info is in the Studio footer).
 
* To compact the database on another node,  
  simply trigger compaction from the Storage Report view in a browser tab opened for that other node.



## Syntax

<TabItem value="syntax" label="syntax">
<CodeBlock language="js">
{`const compactOperation = new CompactDatabaseOperation(compactSettings);
`}
</CodeBlock>
</TabItem>

| Parameters | Type | Description |
| - | - | - |
| **compactSettings** | object  | Settings for the compact operation.<br/>See object fields below. |

| compactSettings fields | | |
| - | - | - |
| **databaseName** | string | Name of database to compact. Mandatory param. |
| **documents** | boolean | Indicates if documents should be compacted. Optional param. |
| **indexes** | string[] | List of index names to compact. Optional param. |
| | | __Note__: Either _Documents_ or _Indexes_ (or both) must be specified |




</LanguageContent>

<!---
### Database
- [How to create database?](../../../client-api/operations/server-wide/create-database)
- [How to get database statistics](../../../client-api/operations/maintenance/get-stats)
- [How to restore a database from backup](../../../client-api/operations/server-wide/restore-backup)
- [Switch operation to different node](../../../client-api/operations/how-to/switch-operations-to-a-different-node)

### Compression
- [Documents Compression](../../../server/storage/documents-compression)

### Studio
- [Storage Report](../../../studio/database/stats/storage-report)


-->